<resources>
    <string name="app_name">Todo List</string>
    <string name="task_name">Task Name</string>
    <string name="task_description_label">Description</string>
    <string name="add_task">Add Task</string>
    <string name="save_task">Save</string>
    <string name="cancel_task">Cancel</string>
    <string name="task_description">Description</string>
    <string name="edit_task">Edit Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>