<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/taskListFragment">

    <fragment
        android:id="@+id/taskListFragment"
        android:name="com.test.stechoq.ui.list.TaskListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_task_list">
        <action
            android:id="@+id/action_taskListFragment_to_addTaskFragment"
            app:destination="@id/addTaskFragment" />
        <action
            android:id="@+id/action_taskListFragment_to_editTaskFragment"
            app:destination="@id/editTaskFragment" />
    </fragment>
    <fragment
        android:id="@+id/addTaskFragment"
        android:name="com.test.stechoq.ui.add.AddTaskFragment"
        android:label="@string/add_task"
        tools:layout="@layout/task_item_detail" />
    <fragment
        android:id="@+id/editTaskFragment"
        android:name="com.test.stechoq.ui.edit.EditTaskFragment"
        android:label="@string/edit_task"
        tools:layout="@layout/task_item_detail">
        <argument
            android:name="task_id"
            app:argType="integer" />
    </fragment>
</navigation>