<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:focusableInTouchMode="true"
    android:padding="15dp"
    tools:context=".ui.add.AddTaskActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_task_name_wrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_task_desc_wrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_task_name_wrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_task_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_save_task"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/save_task"
        app:layout_constraintEnd_toEndOf="@+id/et_task_desc_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/et_task_desc_wrapper" />

    <Button
        android:id="@+id/bt_cancel_task"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/red"
        android:text="@string/cancel_task"
        app:layout_constraintStart_toStartOf="@+id/et_task_desc_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/et_task_desc_wrapper" />


</androidx.constraintlayout.widget.ConstraintLayout>